标记不兼容java17的方法。