@@ -42,4 +42,18 @@
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>args-for-un-java8</id>
+			<properties>
+				<maven.surefire.argLine>
+					--add-opens java.base/java.lang=ALL-UNNAMED
+					--add-opens java.base/java.util.regex=ALL-UNNAMED
+					--illegal-access=permit
+					-Dillegal-access=permit
+				</maven.surefire.argLine>
+			</properties>
+		</profile>
+	</profiles>
 </project>
